--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
   },
-  "repository": "git@github.com:annie131187/dndHomework.git"
+  "repository": "git@github.com:annie131187/dndHomework.git",
+  "dependencies": {}
 }
